<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity"
    android:orientation="vertical">


    <android.support.design.widget.TabLayout
     android:layout_width="match_parent"
     android:layout_height="56dp"
     app:tabGravity="fill"
     app:tabMode="fixed"
     android:id="@+id/tablayout_id"
     app:tabTextColor="@color/textColor"
     app:tabIndicatorColor="@color/tabIndicator"
     android:background="@color/appbar"
     ></android.support.design.widget.TabLayout>
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewpage_id"></android.support.v4.view.ViewPager>

</LinearLayout>

