<resources>
    <string name="app_name">Quest Quiz</string>
    <string name="title_activity_example">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="question">Digite a Questão</string>
    <string name="op_one">Opção Um</string>
    <string name="op_two">Opção dois</string>
    <string name="op_there">Opção Três</string>
    <string name="op_quatro">Opção Quatro</string>
    <string name="marque_a_op_o_correta">Marque a Opção correta</string>

    <string-array name="lista_materia">
        <item>portugues</item>
        <item>matematica</item>
        <item>historia</item>
        <item>geografia</item>
        <item>ciencia</item>
        <item>tecnologia</item>
        <item>filosofia</item>
        <item>sociologia</item>
        <item>fisica</item>
        <item>quimica</item>
        <item>artes</item>
        <item>idiomas</item>
        <item>gerais</item>
    </string-array>

</resources>
